@@ -6,7 +6,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # -------------------------------------------------------------------------
-# RCS: @(#) $Id: spf.test,v 1.1 2004/07/01 12:25:14 patthoyts Exp $
+# RCS: @(#) $Id: spf.test,v 1.2 2004/07/30 21:46:19 patthoyts Exp $
 
 # -------------------------------------------------------------------------
 # Initialise the test package
@@ -48,115 +48,125 @@ proc ::spf::SPF {domain} { return "v=spf1 ?all" }
 
 test spf-1.1 {a directive: fallthrough} {
     list [catch {
-        spf::Spf 192.168.0.1 local.net "v=spf1 a -all"
+        spf::Spf 192.168.0.1 local.net user@example.com "v=spf1 a -all"
     } r] $r
 } {0 -}
 
 test spf-1.2 {a directive: fallthrough} {
     list [catch {
-        spf::Spf 192.168.0.1 local.net "v=spf1 a ?all"
+        spf::Spf 192.168.0.1 local.net user@example.com "v=spf1 a ?all"
     } r] $r
 } {0 ?}
 
 test spf-1.3 {a directive: matching subnet} {
     list [catch {
-        spf::Spf 192.168.0.1 local.net "v=spf1 a/24 ?all"
+        spf::Spf 192.168.0.1 local.net user@example.com "v=spf1 a/24 ?all"
     } r] $r
 } {0 +}
 
 test spf-1.3 {a directive: rejected matching subnet} {
     list [catch {
-        spf::Spf 192.168.0.1 local.net "v=spf1 -a/24 ?all"
+        spf::Spf 192.168.0.1 local.net user@example.com "v=spf1 -a/24 ?all"
     } r] $r
 } {0 ?}
 
 test spf-1.4 {a directive: match host} {
     list [catch {
-        spf::Spf 192.168.0.4 local.net "v=spf1 a ?all"
+        spf::Spf 192.168.0.4 local.net user@example.com "v=spf1 a ?all"
     } r] $r
 } {0 +}
 
 test spf-2.1 {mx directive: fail mx} {
     list [catch {
-        spf::Spf 192.168.0.1 local.net "v=spf1 mx ?all"
+        spf::Spf 192.168.0.1 local.net user@example.com "v=spf1 mx ?all"
     } r] $r
 } {0 ?}
 
 test spf-2.2 {mx directive: match mx subnet} {
     list [catch {
-        spf::Spf 192.168.0.1 local.net "v=spf1 mx/24 ?all"
+        spf::Spf 192.168.0.1 local.net user@example.com "v=spf1 mx/24 ?all"
     } r] $r
 } {0 +}
 
 test spf-2.3 {mx directive: fail match explict mx} {
     list [catch {
-        spf::Spf 192.168.0.1 local.net "v=spf1 mx:mail.local.net ?all"
+        spf::Spf 192.168.0.1 local.net user@example.com \
+            "v=spf1 mx:mail.local.net ?all"
     } r] $r
 } {0 ?}
 
 test spf-2.4 {mx directive: match explict mx} {
     list [catch {
-        spf::Spf 192.168.0.1 local.net "v=spf1 mx:mail.local.net/24 ?all"
+        spf::Spf 192.168.0.1 local.net user@example.com \
+            "v=spf1 mx:mail.local.net/24 ?all"
     } r] $r
 } {0 +}
 
 test spf-2.4 {mx directive: match explict mx} {
     list [catch {
-        spf::Spf 192.168.0.4 local.net "v=spf1 mx:mail.local.net ?all"
+        spf::Spf 192.168.0.4 local.net user@example.com \
+            "v=spf1 mx:mail.local.net ?all"
     } r] $r
 } {0 +}
 
 test spf-3.1 {ptr directive} {
     list [catch {
-        spf::Spf 192.168.0.4 local.net "v=spf1 ptr ?all"
+        spf::Spf 192.168.0.4 local.net user@example.com "v=spf1 ptr ?all"
     } r] $r
 } {0 +}
 
 test spf-3.2 {ptr directive} {
     list [catch {
-        spf::Spf 192.168.0.1 local.net "v=spf1 ptr ?all"
+        spf::Spf 192.168.0.1 local.net user@example.com "v=spf1 ptr ?all"
     } r] $r
 } {0 ?}
 
 test spf-3.3 {ptr directive} {
     list [catch {
-        spf::Spf 192.168.0.4 local.net "v=spf1 ptr:local.net ?all"
+        spf::Spf 192.168.0.4 local.net user@example.com \
+            "v=spf1 ptr:local.net ?all"
     } r] $r
 } {0 +}
 
 test spf-3.4 {ptr directive} {
     list [catch {
-        spf::Spf 192.168.0.4 local.net "v=spf1 ptr:local.com ?all"
+        spf::Spf 192.168.0.4 local.net user@example.com \
+            "v=spf1 ptr:local.com ?all"
     } r] $r
 } {0 ?}
 
 test spf-4.1 {ip4 directive} {
     list [catch {
-        spf::Spf 192.168.0.1 local.net "v=spf1 ip4:192.168.0.0/32 ?all"
+        spf::Spf 192.168.0.1 local.net user@example.com \
+            "v=spf1 ip4:192.168.0.0/32 ?all"
     } r] $r
 } {0 ?}
 
 test spf-4.2 {ip4 directive} {
     list [catch {
-        spf::Spf 192.168.0.1 local.net "v=spf1 ip4:192.168.0.0/24 ?all"
+        spf::Spf 192.168.0.1 local.net user@example.com \
+            "v=spf1 ip4:192.168.0.0/24 ?all"
     } r] $r
 } {0 +}
 
 test spf-4.3 {ip4 directive} {
     list [catch {
-        spf::Spf 192.168.0.1 local.net "v=spf1 ip4:192.168.0.0/16 ?all"
+        spf::Spf 192.168.0.1 local.net user@example.com \
+            "v=spf1 ip4:192.168.0.0/16 ?all"
     } r] $r
 } {0 +}
 
 test spf-4.4 {ip4 directive} {
     list [catch {
-        spf::Spf 192.255.0.1 local.net "v=spf1 ip4:192.168.0.0/16 ?all"
+        spf::Spf 192.255.0.1 local.net user@example.com \
+            "v=spf1 ip4:192.168.0.0/16 ?all"
     } r] $r
 } {0 ?}
 
 test spf-4.5 {ip4 directive} {
     list [catch {
-        spf::Spf 192.168.0.1 local.net "v=spf1 ip4:192.168/16 ?all"
+        spf::Spf 192.168.0.1 local.net user@example.com \
+            "v=spf1 ip4:192.168/16 ?all"
     } r] $r
 } {0 +}
 
